@@ -694,7 +694,8 @@ NODE sub_node
   <div class="description">
  <p xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude">Specify the colours used for drawing the <a href="#NODE_LABEL">LABEL.</a> </p> 
  <p xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude">red, green and blue are numbers from 0 to 255. </p> 
- <p xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude"><a href="#NODE_COLORS">LABELFONTSHADOWCOLOR,</a> <a href="#NODE_COLORS">LABELBGCOLOR</a> and <a href="#NODE_COLORS">LABELOUTLINECOLOR</a> have an additional 
+ <p xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude"><a href="#NODE_COLORS">LABELFONTSHADOWCOLOR,</a> <a href="#NODE_COLORS">LABELBGCOLOR</a> and <a href="#NODE_COLORS">LABELOUTLINECOLOR,</a> <a href="#NODE_COLORS">AICONFILLCOLOR</a> and <a href="#NODE_COLORS">AICONOUTLINECOLOR</a> 
+ have an additional 
  option - 'none' 
  - which stops that element of the <a href="#NODE_LABEL">LABEL</a> being drawn. <a href="#NODE_COLORS">LABELFONTSHADOWCOLOR</a> 
  defaults to 'none'. </p> 
@@ -710,6 +711,9 @@ NODE sub_node
   <div class="changes">
     <h4>Change History</h4>
     <dl class="small">
+      <dt>0.98</dt>
+      <dd>Added 'none' for AICONFILLCOLOR.
+        </dd>
       <dt>0.95</dt>
       <dd>Added 'contrast' and 'copy' options.
         </dd>
@@ -1097,7 +1101,7 @@ LINK a_real_link
       <pre>LINK firstlink
     NODES node1:E node2:E
 
-                LINK secondlink
+LINK secondlink
     NODES node1:W node2:W
             </pre>
     </blockquote>
@@ -1108,7 +1112,7 @@ LINK a_real_link
       </small>
       <pre>LINK firstlink NODES node1:E50 node2:E50
 
-                LINK secondlink
+LINK secondlink
     NODES node1:W50 node2:W50
             </pre>
     </blockquote>
@@ -3118,7 +3122,10 @@ LINK a_real_link
       <small>
         <cite>The default scale set</cite>
       </small>
-      <pre>SCALE 1 10 140 0 255
+      <pre>
+SCALE 0 0 192 192 192
+SCALE 0 1 255 255 255
+SCALE 1 10 140 0 255
 SCALE 10 25 32 32 255
 SCALE 25 40 0 192 255
 SCALE 40 55 0 240 0
