@@ -1,0 +1,38 @@
+WIDTH 370
+HEIGHT 100
+TIMEPOS -1 -1
+BGCOLOR 192 192 192
+
+
+NODE DEFAULT
+	LABELOFFSET 0 40
+	LABEL {node:this:name}
+	AICONFILLCOLOR none
+	TARGET static:30:70
+
+NODE box
+	POSITION 30 50
+	ICON 32 32 box
+
+NODE rbox
+	POSITION 80 50
+	ICON 32 32 rbox
+
+NODE round
+	POSITION 130 50
+	ICON 32 32 round
+
+NODE inpie
+	POSITION 180 50
+	ICON 32 32 inpie
+
+NODE outpie
+	POSITION 230 50
+	ICON 32 32 outpie
+
+#NODE gauge
+#	POSITION 280 50
+#	ICON 32 32 gauge
+NODE nink
+	POSITION 320 50
+	ICON 32 32 nink
